@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -70,6 +70,7 @@
     <Compile Include="Commands\SetCommand.cs" />
     <Compile Include="Expressions\ArrayExpression.cs" />
     <Compile Include="Expressions\ConcatenateExpression.cs" />
+    <Compile Include="Expressions\HostedInvocationExpression.cs" />
     <Compile Include="Expressions\HostedExpression.cs" />
     <Compile Include="Expressions\VariableVariableExpression.cs" />
     <Compile Include="Expressions\GetValueExpression.cs" />
